test transformer with final seed and write taming-transformers, pytorch, etc. in the report

--- a/experiments/taming_transformers/sampling_experiment.ipynb
+++ b/experiments/taming_transformers/sampling_experiment.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "id": "L3ORp2wl_kTA"
    },
@@ -139,16 +139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "id": "cS0kl6Rv_xKh"
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "<torch._C.Generator at 0x7f6225848a90>"
+      "text/plain": "<torch._C.Generator at 0x7fc81e6093b0>"
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,6 +824,66 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Working with z of shape (1, 256, 16, 16) = 65536 dimensions.\n",
+      "loaded pretrained LPIPS loss from taming/modules/autoencoder/lpips/vgg.pth\n",
+      "VQLPIPSWithDiscriminator running with hinge loss.\n",
+      "Working with z of shape (1, 256, 16, 16) = 65536 dimensions.\n",
+      "loaded pretrained LPIPS loss from taming/modules/autoencoder/lpips/vgg.pth\n",
+      "VQLPIPSWithDiscriminator running with hinge loss.\n",
+      "Working with z of shape (1, 256, 16, 16) = 65536 dimensions.\n",
+      "loaded pretrained LPIPS loss from taming/modules/autoencoder/lpips/vgg.pth\n",
+      "VQLPIPSWithDiscriminator running with hinge loss.\n",
+      "Working with z of shape (1, 256, 16, 16) = 65536 dimensions.\n",
+      "loaded pretrained LPIPS loss from taming/modules/autoencoder/lpips/vgg.pth\n",
+      "VQLPIPSWithDiscriminator running with hinge loss.\n"
+     ]
+    }
+   ],
+   "source": [
+    "models_prueba = []\n",
+    "titles_prueba = [\"Input\", \"VQGAN pruebaaug2 - 256x256 - 70ep\", \"VQGAN pruebaaug2 - 256x256 - 75ep\", \"VQGAN pruebaaug2 - 256x256 - 80ep\", \"VQGAN pruebaaug2 - 256x256 - 85ep\"]\n",
+    "\n",
+    "config_name = \"_aug_2_\"\n",
+    "\n",
+    "directory = \"2022-06-04T08-42-35\"\n",
+    "config_name_ep = config_name+\"70/\"\n",
+    "config = load_config(\"logs/\"+directory+config_name_ep+\"configs/\"+directory+\"-project.yaml\", display=False)\n",
+    "model = load_vqgan(config, ckpt_path=\"logs/\"+directory+config_name_ep+\"/checkpoints/last.ckpt\").to(DEVICE)\n",
+    "models_prueba.append(model)\n",
+    "\n",
+    "directory = \"2022-06-04T11-34-50\"\n",
+    "config_name_ep = config_name+\"75/\"\n",
+    "config = load_config(\"logs/\"+directory+config_name_ep+\"configs/\"+directory+\"-project.yaml\", display=False)\n",
+    "model = load_vqgan(config, ckpt_path=\"logs/\"+directory+config_name_ep+\"/checkpoints/last.ckpt\").to(DEVICE)\n",
+    "models_prueba.append(model)\n",
+    "\n",
+    "directory = \"2022-06-04T14-50-14\"\n",
+    "config_name_ep = config_name+\"80/\"\n",
+    "config = load_config(\"logs/\"+directory+config_name_ep+\"configs/\"+directory+\"-project.yaml\", display=False)\n",
+    "model = load_vqgan(config, ckpt_path=\"logs/\"+directory+config_name_ep+\"/checkpoints/last.ckpt\").to(DEVICE)\n",
+    "models_prueba.append(model)\n",
+    "\n",
+    "directory = \"2022-06-04T18-19-13\"\n",
+    "config_name_ep = config_name+\"85/\"\n",
+    "config = load_config(\"logs/\"+directory+config_name_ep+\"configs/\"+directory+\"-project.yaml\", display=False)\n",
+    "model = load_vqgan(config, ckpt_path=\"logs/\"+directory+config_name_ep+\"/checkpoints/last.ckpt\").to(DEVICE)\n",
+    "models_prueba.append(model)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "#### Reconstruction pipelines to sample images"
@@ -908,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1807,6 +1867,143 @@
     "os.makedirs(path, exist_ok=True)\n",
     "img = reconstruction_pipeline(models_256aug2, validation_data, titles_256aug2, size=256)\n",
     "img.save(path+\"aug2.jpg\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "Unsqueezed: torch.Size([1, 3, 256, 256])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n",
+      "VQGAN --- VQModel: latent shape: torch.Size([16, 16])\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = \"../validation/256aug2prueba/\"\n",
+    "os.makedirs(path, exist_ok=True)\n",
+    "img = reconstruction_pipeline(models_prueba, validation_data, titles_prueba, size=256)\n",
+    "img.save(path+\"aug2prueba.jpg\")"
    ],
    "metadata": {
     "collapsed": false,
