--- a/report/bibliografia/bibliografia.bib
+++ b/report/bibliografia/bibliografia.bib
@@ -77,3 +77,20 @@
     note={\url{http://www.deeplearningbook.org}},
     year={2016}
 }
+
+@inproceedings{chen2020generative,
+  title={Generative pretraining from pixels},
+  author={Chen, Mark and Radford, Alec and Child, Rewon and Wu, Jeffrey and Jun, Heewoo and Luan, David and Sutskever, Ilya},
+  booktitle={International Conference on Machine Learning},
+  pages={1691--1703},
+  year={2020},
+  organization={PMLR}
+}
+
+@inproceedings{esser2021taming,
+  title={Taming transformers for high-resolution image synthesis},
+  author={Esser, Patrick and Rombach, Robin and Ommer, Bjorn},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={12873--12883},
+  year={2021}
+}
