--- a/report/bibliografia/webs.bib
+++ b/report/bibliografia/webs.bib
@@ -97,3 +97,17 @@
   url = {https://www.sage.com/es-es/blog/dias-vacaciones/},
   urldate = {2022-05-25}
 }
+
+@online{repository,
+  title = {TFG GitHub repository},
+  author = "Pedro Bedmar López",
+  url = {https://github.com/pbedmar/tfg},
+  urldate = {2022-06-03}
+}
+
+@online{vqvae,
+  title = {Understanding VQ-VAE (DALL-E Explained Pt. 1)},
+  author = "Charlie Snell",
+  url = {https://ml.berkeley.edu/blog/posts/vq-vae/},
+  urldate = {2022-06-04}
+}
