--- a/report/proyecto.tex
+++ b/report/proyecto.tex
@@ -32,6 +32,9 @@
 \renewbibmacro{in:}{}
 
 \usepackage{booktabs}
+\usepackage{dirtree}
+\usepackage{algorithmicx}
+\usepackage{algorithm}
 
 % \usepackage[
 %     a4paper,
