--- a/report/capitulos/02_Planificacion.tex
+++ b/report/capitulos/02_Planificacion.tex
@@ -1,31 +1,12 @@
 \chapter{Gestión y planificación del proyecto}
 
-\section{Objetivos}
-
-\begin{itemize}
-    \item \textbf{[OBJ1]} Conocer el estado del arte de las Cheminformatics: a qué se ha dedicado esta ciencia y algunas herramientas notables que se han desarrollado dentro de ella.
-    \item \textbf{[OBJ2]} Crear/entrenar un modelo capaz de generar imágenes sintéticas de compuestos químicos.
-    \item \textbf{[OBJ3]} Construir un modelo clasificador entre imágenes que presentan compuestos organometálicos y aquellas que no.
-    \item \textbf{[OBJ4]} Aprender a organizar un proyecto de tamaño mediano y conocer las herramientas que se utilizan en la actualidad para su correcto desarrollo.
-\end{itemize}
-
-\section{Tareas}
-\begin{itemize}
-    \item \textbf{[T1]} Estudio del estado del arte del problema.
-    \begin{itemize}
-        \item \textbf{[T1.1]} Lectura de publicaciones introductorios a las Cheminformatics.  
-        \item \textbf{[T1.2]} Conocimiento de las principales herramientas que se han desarrollado.
-        \item \textbf{[T1.2]} Repasar los principales modelos de Deep Learning.
-    \end{itemize}
-\end{itemize}
-
-\section{Metodología de desarrollo}
+\section{Metodología}
 
 En los primeros años del desarrollo de software, este se creaba sin seguir ningún enfoque formal. Muchos de los proyectos que se iniciaban terminaban fracasando por los retrasos en la entrega, el mal funcionamiento del producto o por no cumplir los requisitos del cliente. Además, la complejidad requerida en el software iba aumentando con el tiempo. 
 
 Por ello, era necesario crear un marco que permitiera metodizar el desarrollo. Es así como surge la Ingeniería del Software, que acompaña al software durante todo su ciclo vital.
 
-En nuestro proyecto vamos a aplicar este enfoque a la hora de desarrollar el producto, apoyándonos sobre una metodología de desarrollo para asegurarnos que se consiguen los objetivos en el tiempo previsto, detectando posibles amenazas y problemas a tiempo.
+En este proyecto vamos a aplicar este enfoque a la hora de desarrollar el producto, apoyándonos sobre una metodología de desarrollo para asegurarnos que se consiguen los objetivos en el tiempo previsto, detectando posibles amenazas y problemas a tiempo.
 
 Las metodologías se pueden clasificar en dos grandes bloques \cite{metodologiasDesarrollo}, tradicionales y ágiles. Las tradicionales son las que primero surgieron, se caracterizan por definir rígidamente los requisitos al inicio del proyecto. En ellas, se aplica una serie de etapas de forma lineal, y una vez alcanzada una de ellas no se puede volver atrás. Por todo esto no se adaptan bien a los cambios.
 
@@ -83,9 +64,29 @@ Cuando se trabaja con esta metodología, en cada equipo existe un miembro conoci
 
 Estas características y fases que hemos mencionado son las especificadas en la definición original de SCRUM. Aún así, en la práctica cada proyecto las adapta a sus necesidades. En general, los sprints suelen tener una duración de 2 o 3 semanas. 
 
-\section{Temporización}
+\section{Planificación}
+Para lograr cumplir con los objetivos, se planifican las siguientes tareas a realizar:
+\begin{itemize}
+    \item \textbf{[T1]} Estudio del estado del arte del problema.
+    \begin{itemize}
+        \item \textbf{[T1.1]} Lectura de publicaciones introductorias a las Cheminformatics.  
+        \item \textbf{[T1.2]} Repaso de la literatura sobre aprendizaje profundo, comprendiendo los principales modelos de generación y clasificación de imágenes.
+        \item \textbf{[T1.3]} Conocimiento de las principales herramientas que se han desarrollado en ambos ámbitos.
+    \end{itemize}
+    \item \textbf{[T2]} Implementación/adaptación de un modelo de síntesis de imágenes entrenado con nuestro propio conjunto de datos.
+    \begin{itemize}
+        \item \textbf{[T2.1]} Sintetizar imágenes de moléculas organometálicas.
+        \item \textbf{[T2.2]} Sintetizar imágenes de moléculas que no son organometálicas, es decir, ejemplos negativos.
+    \end{itemize}
+    \item \textbf{[T3]} Implementación de un modelo clasificador de imágenes, capaz de distinguir moléculas organometálicas de ejemplos negativos.
+    \begin{itemize}
+        \item \textbf{[T3.1]} Realizar pruebas con diferentes arquitecturas e hiperparámetros para comprobar cuáles se adaptan mejor al problema.
+        \item \textbf{[T3.2]} Creación de ejecutable que reciba una imagen y la clasifique, utilizando la mejor configuración encontrada.
+    \end{itemize}
+    \item \textbf{[T4]} Documentación del trabajo realizado.
+\end{itemize}
 
-Este proyecto se realiza en el marco de un Trabajo de Fin de Grado (TFG). En la Universidad de Granada está cuantificado en 12 créditos, lo que significan 300 horas de trabajo. Creemos que los objetivos propuestos son adecuados para ser realizados en ese número de horas, sin ser excesivos ni escasos.
+Para el éxito del proyecto es necesario asignar una temporización razonable a cada tarea. Este se realiza en el marco de un Trabajo de Fin de Grado (TFG): en la Universidad de Granada está cuantificado en 12 créditos, lo que significan 300 horas de trabajo. Creemos que los objetivos propuestos son adecuados para ser realizados en ese número de horas, sin ser excesivos ni escasos.
 
 Los TFGs se suelen realizar en un único cuatrimestre, que normalmente coincide con el último del grado. Esto significa cuatro meses en los que repartir las 300 horas, desde marzo hasta junio. Bien es cierto que este proyecto se empezó con algo de anterioridad, en febrero, para comenzar a profundizar en la literatura y conocer de forma más precisa las necesidades de los investigadores de Negev.
 
@@ -106,7 +107,7 @@ Una ventaja del sector tecnológico es que muchos proyectos no necesitan una gra
 \begin{itemize}
     \item \textbf{Ordenador personal.} Equipo desde el que trabajará el estudiante. Lo utilizará para consultar la literatura, implementar el código y redactar la memoria. En concreto, se trata de un MacBook Pro 15' 2015, que monta un procesador Intel Core i7 a 2.5 GHz y 16 GB de RAM.
     \item \textbf{Monitor.} Utilizado como apoyo a la pantalla del portátil. El modelo utilizado ha sido fabricado por la marca Benq, y presenta una resolución 1920x1080.
-    \item \textbf{Clúster GPU.} Hoy en día, la mayoría del entrenamiento de modelos en Aprendizaje Automático y Deep Learning no se lleva a cabo de forma local, sino en un clúster habilitado para ello. La Universidad de Granada, y en concreto el CITIC-UGR, cuenta con uno de ellos donde mediante SLURM se pueden enviar trabajos que se ejecutaran en una GPU, acelerando en gran medida los entrenamientos.
+    \item \textbf{Clúster GPU.} Hoy en día, la mayoría del entrenamiento de modelos en Aprendizaje Automático y Deep Learning no se lleva a cabo de forma local, sino en un clúster habilitado para ello. La Universidad de Granada, y en concreto el Instituto DaSCI (Instituto Andaluz Interuniversitario en Data Science and Computational Intelligence), cuenta con uno de ellos donde mediante SLURM se pueden enviar trabajos que se ejecutaran en una GPU, acelerando en gran medida los entrenamientos.
 \end{itemize}
 
 \subsection{Recursos software}
@@ -115,22 +116,20 @@ Una ventaja del sector tecnológico es que muchos proyectos no necesitan una gra
     \item \textbf{macOS Monterey 12.3.1.} Por encima del resto de programas, se encuentra el Sistema Operativo, encargado de administrar los recursos hardware y controlar la ejecución de procesos.
     \item \textbf{PyCharm 2021.3.3.} IDE desarrollado por la compañía JetBrains, ideal para trabajar con proyectos en Python e incluso con Jupyter Notebooks. Además, se integra directamente mediante SSH con el clúster GPU, permitiendo la sincronización de ficheros entre el espacio de trabajo local y el remoto. Aunque es un software de pago, los estudiantes pueden descargarlo de forma gratuita.
     \item \textbf{Git y GitHub.} Git es un software de control de versiones que permite ir almacenando versiones intermedias del código, de forma que se puede volver hacia atrás si es necesario. También facilita el trabajo en equipo, ya que puede combinar el trabajo de múltiples personas de forma automática (siempre y cuando no hayan trabajado sobre la misma línea). GitHub es una plataforma de alojamiento de proyectos que utilizan Git. Nos es útil, ya que actúa como almacenamiento de seguridad de nuestro trabajo.
-    \item \textbf{Google Meet.} Producto de videoconferencias de Google. Es la plataforma oficial de comunicación síncrona en la Universidad de Granada. Será utilizado en las reuniones entre Rocío y Pedro.
+    \item \textbf{Google Meet.} Producto de videoconferencias de Google. Es la plataforma oficial de comunicación síncrona en la Universidad de Granada. Será utilizado en las reuniones entre los integrantes del equipo.
     \item \textbf{VSCode y \LaTeX.} VSCode es un editor de código desarrollado por Microsoft. Cuenta con multitud de extensiones creadas por la comunidad, entre ellas destacan algunas que permiten el formateo y compilado de ficheros \LaTeX. Este software es un sistema de composición de textos utilizado para escribir esta memoria.
 \end{itemize}
 
 \section{Presupuesto}
 En esta sección presentamos el presupuesto del proyecto.
 
-Al concluir, Pedro Bedmar López, trabajador autónomo con NIF 75935296Z, emitirá una única factura dirigida a la Universidad de Negev. El pago final se realizará mediante transferencia bancaria al número de cuenta especificado en ella.
-
 \subsection{Coste de recursos humanos}
-La mayor parte del coste vendrá generado por las horas de trabajo dedicadas al proyecto.
+La mayor parte del coste vendrá generado por las horas de trabajo dedicadas al proyecto por el alumno.
 
-Pedro va a trabajar durante 300 horas. Según la Universidad Europea, el salario medio de un informático recién egresado ronda los 18000 - 22000€ al año \cite{salario_ue}. Si contamos el número de días hábiles para este año 2022, obtenemos 253 días \cite{dias_laborables}, a los que hay que restarle 22 días de vacaciones \cite{vacaciones}. En total trabajaría 231 días al año ocho horas por día, lo que hace un total de 1848 horas. Si tomamos como salario medio los 20000 euros anuales y los dividimos por el número de horas que se trabajan al año, obtenemos un coste por hora de 10.82€.
+Según la Universidad Europea, el salario medio de un informático recién egresado ronda los 18000 - 22000€ al año \cite{salario_ue}. Si contamos el número de días hábiles para este año 2022, obtenemos 253 días \cite{dias_laborables}, a los que hay que restarle 22 días de vacaciones \cite{vacaciones}. En total trabajaría 231 días al año ocho horas por día, lo que hace un total de 1848 horas. Si tomamos como salario medio los 20000 euros anuales y los dividimos por el número de horas que se trabajan al año, obtenemos un coste por hora de 10.82€.
 
 \subsection{Otros costes}
-A la cantidad total hay que añadirle los impuestos y tasas correspondientes, en nuestro caso el IVA (21\%). También habrá que descontarle la retención de IRPF, para que la Universidad de Negev lo pague a Hacienda en mi nombre. En mi caso, por ser mi primer año como autónomo, el tipo de IRPF que me corresponde es del 7\%.
+A la cantidad total hay que añadirle los impuestos y tasas correspondientes, en nuestro caso el IVA (21\%). En mi caso, por ser mi primer año como autónomo, el tipo de IRPF que me corresponde es del 7\%.
 
 \subsection{Presupuesto final}
 
@@ -149,6 +148,3 @@ Hora de trabajo autónomo & 10.82€             & 300                    & 3246
 \textbf{Total:}          &                    &                        & 3700.44€        
 \end{tabular}
 \end{table}
-
-\section{Entregable final y documentación}
-El TFG  concluye cuando se entrega la versión final de este al cliente. Esto incluye tanto el código como la memoria. El código se hará llegar en un repositorio de GitHub, y la memoria se generará en formato PDF.
